[project]
name = "examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent-the-gamer",email = "erxianqiaottjt@163.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
