[package]
name = "pycn"
version.workspace = true
description = "Write Python in Chinese."
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
parser = { path = "../parser" }

[build-dependencies]
pyo3-build-config = "0.25.1"
